--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   app:
     image: yiisoftware/yii-php:8.1-fpm-nginx
-    container_name: yii-app
+    container_name: php8.1-VO
     build:
       context: .
     ports:
